--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ Designed for flexibility and reproducibility, it supports biodiversity monitorin
 
 ------------------------------------------------------------------------
 
-## Workflow Overview
+## Step-by-Step Workflow
 
 `dissmapr` implements a structured, reproducible workflow for analysing biodiversity patterns and delineating bioregions.
 Each function aligns with a specific step, guiding users from data acquisition to predictive mapping.
@@ -106,22 +106,27 @@ Load the spatial boundary data for South Africa to serve as the geographic refer
 ```{r aoi}
 # Read RSA shape file
 rsa = sf::st_read('inst/extdata/rsa.shp')
+
+# Define your resolution and create mask to use later
+res = 0.5 # 0.5 degrees is roughly 55km
+
+# Convert to a terra vector
+rsa_vect = vect(rsa)
+
+# Create an empty raster over RSA at your desired resolution
+grid = rast(rsa_vect, resolution = res, crs = crs(rsa_vect))
+values(grid) = 1   # fill with dummy values
 ```
 
 ------------------------------------------------------------------------
 
-### 4. Site by species matrix and sampling effort
+### 4. Get species occurrence records using `get_occurrence_data`
 
-This section focuses on automating the retrieval and pre-processing of core data, including species occurrence and environmental variables.
-These data form the basis for further ecological analysis and model building.
+This section focuses on automating the retrieval and pre-processing of biodiversity occurrence data from various sources, including:
 
-#### Access occurrences of user-specified taxon or species list using `get_occurrence_data`
-
-Use `get_occurrence_data` to automate the retrieval and pre-processing of species occurrence data from multiple sources, including:
-
-i)  local databases,
-ii) the Global Biodiversity Information Facility (GBIF), and
-iii) species occurrence cubes from B3 (specification) [\*work in progress].
+i)  local `databases`.csv` files,
+ii) URLs or `.zip` files from the Global Biodiversity Information Facility (GBIF), and
+iii) species occurrence cubes from B3 (specification) [*work in progress*].
 
 The function assembles data on species distributions across specified taxonomic groups and regions, producing presence-absence or abundance matrices that quantify species co-occurrence within locations.
 
@@ -172,7 +177,7 @@ sp_cols = names(site_spp)[-c(1:3)]
 
 ------------------------------------------------------------------------
 
-### 6. Summarise records by grid using `generate_grid`
+### 6. Summarise records by grid centroid using `generate_grid`
 
 Use `generate_grid` to divide the study area, derived from the geographic extent of the occurrence data above, into grids of user-defined resolution, creating a spatial grid over a specified geographic extent.
 It assigns unique grid IDs to points and summarizes selected data columns within each grid cell.
@@ -227,170 +232,6 @@ ggplot() +
   theme_minimal() +
   labs(title = "0.5° Grid with Observation Counts",
        x = "Longitude", y = "Latitude")
-```
-
-------------------------------------------------------------------------
-
-### 7. Generate site by species matrix called `site_spp`
-
-Create a matrix of species counts per site for use in biodiversity and dissimilarity analyses.
-
-```{r site-spp}
-xy = grid_spp[,2:3]
-site_spp = grid_spp[,c(1:3,5:ncol(grid_spp))]
-head(site_spp[,1:10])
-dim(site_spp)
-```
-
-#### Generate record of occurrence counts called `sam_eff`
-
-Summarize the number of species observations per grid cell to assess sampling effort.
-
-```{r sam-eff}
-sam_eff = grid_spp[, c("grid_id","centroid_lon","centroid_lat","obs_sum")]
-obs_cnt = grid_spp[,c(1:3,5)]
-dim(obs_cnt)
-```
-
-#### Generate a binary data frame 'sbs'
-
-Convert species abundance data to presence--absence format (`site_spp_pa`) for binary dissimilarity analyses.
-
-```{r sbs}
-sp_cols = names(site_spp)[-(1:5)]
-sbs     = site_spp %>%
-  mutate(across(all_of(sp_cols), ~ ifelse(. > 0, 1, 0)))
-
-# Assuming 'sp_cols' is a vector of column names
-site_spp_pa = site_spp %>%
-  mutate(across(all_of(sp_cols), ~ ifelse(!is.na(.) & . > 0, 1, 0)))
-
-head(site_spp_pa[,1:10])
-dim(site_spp_pa)
-```
-
-#### Generate richness of sbs row sums and map
-
-Calculate species richness per site based on binary presence--absence data.
-
-```{r spp-rich}
-spp_rich = grid_spp[, c("grid_id","centroid_lon","centroid_lat","spp_rich")]
-```
-
-#### Generate 'sam.eff' and 'spp_rich' raster map
-
-Visualise sampling effort and species richness as raster layers over the study area.
-
-```{r eff-rich}
-ras_effRich = grid_list$grid[[2:3]]
-plot(sqrt(ras_effRich), col = turbo(100))
-```
-
-***Note**: occurrence coordinates are only used for assigning then into grids; they are not needed beyond this step.*
-
-------------------------------------------------------------------------
-
-### 8. Site by environment matrix
-
-#### Retrieve Environmental Data with `get_enviro_data`
-
-Use `get_enviro_data` to extract environmental variables for spatial points from either species observations or grid centroids.
-Data can be sourced from online repositories (e.g. *WorldClim*, *SoilGrids* via `geodata`) or local rasters.
-The function defines an area of interest with a buffer, extracts selected variables, and interpolates missing values using nearby non-NA points.
-Outputs include cropped rasters, spatial points (as an `sf` object), and a combined site-by-environment data frame (`site_env`) for downstream ecological analyses.
-Future support will extend to *CHELSA* (`climenv`), *Google Earth Engine* (`rgee`), and `mapme.biodiversity` for expanded environmental and biodiversity data access.
-
-```{r get-enviro}
-enviro_list = get_enviro_data(
-  data      = sbs,
-  buffer_km = 10,
-  source    = 'geodata',
-  var       = "bio",
-  res       = 5,
-  path      = 'download_data',
-  sp_cols   = 6:ncol(sbs),
-  ext_cols  = c('obs_sum','spp_rich')
-)
-ras_enviro = enviro_list$env_rast
-
-# Optional: Rename the columns to something more descriptive
-names(ras_enviro) = c("temp_mean", "mdr", "iso", "temp_sea", "temp_max",
-                    "temp_min", "temp_rang","temp_wetQ","temp_dryQ", "temp_warmQ",
-                    "temp_coldQ", "rain_mean","rain_wet", "rain_dry", "rain_sea",
-                    "rain_wetQ", "rain_dryQ","rain_warmQ", "rain_coldQ")
-```
-
-#### Add 'eff-rich' raster to the enviro stack raster
-
-Combine environmental rasters with sampling effort and species richness layers for joint spatial analysis.
-
-```{r ras}
-ras_enviro_effRich = c(ras_effRich, resample(ras_enviro, ras_effRich))
-plot(ras_enviro_effRich[[1:4]])
-```
-
-#### Extract environmental variables for site centroids 'xy'
-
-Link environmental data to grid centroids and visualize spatial variation in selected climate variables.
-
-```{r env-df}
-env_df = enviro_list$env_df[,c(1:5,8:26)]
-head(env_df)
-head(env_df[,15:24])
-
-# Rename `env_df` column names
-names(env_df) = c('grid_id','centroid_lon','centroid_lat','obs_sum','spp_rich',"temp_mean", "mdr", "iso", "temp_sea", "temp_max",
-                                "temp_min", "temp_rang","temp_wetQ", "temp_dryQ", "temp_warmQ",
-                                "temp_coldQ", "rain_mean","rain_wet", "rain_dry", "rain_sea",
-                                "rain_wetQ", "rain_dryQ","rain_warmQ", "rain_coldQ")
-
-# Check the first few rows
-head(env_df)
-
-# Plot the results to check the conversion is accurate
-ggplot() +
-  # Add 0.25deg grid layer
-  geom_sf(data = aoi_grid, fill = NA, color = "darkgrey", alpha = 0.5) +
-  # Add bfly points layer
-  geom_point(data = env_df, aes(x = centroid_lon,
-                                  y = centroid_lat,
-                                  color = temp_mean)) +
-  scale_size_continuous(range = c(0.5, 5)) +  # Adjust the point size range (min, max)
-  scale_color_viridis_c(option = "turbo") +  # Use turbo color scale
-  # Add boundary layer
-  geom_sf(data = rsa, fill = NA, color = "black", alpha = 1) +
-  theme_minimal() +
-  labs(
-    title = "0.25° Grid Cells with temp_mean",
-    x = "Longitude",
-    y = "Latitude")   
-```
-
-#### Generate *Species-by-Environment* data frame 'sbe'
-
-Create a unified data frame of site coordinates, sampling effort, richness, and environmental variables for modelling called `sbe`.
-
-```{r sbe}
-sbe = env_df %>%
-  select(grid_id, centroid_lon, centroid_lat, obs_sum, spp_rich, everything())
-```
-
-### 9. If necessary project coordinates into meters projection (e.g. UTM) using `sf::st_transform`
-
-Reproject spatial coordinates from geographic (WGS84) to a projected system (e.g. Albers Equal Area) for analyses requiring distance in meters, such as spatial clustering or environmental modelling.
-
-```{r reproject}
-# Convert to sf object with WGS84 geographic CRS
-head(xy)
-xy_sf = st_as_sf(xy, coords = c("centroid_lon", "centroid_lat"), crs = 4326)
-
-# Project to Albers Equal Area (meters)
-xy_utm = st_transform(xy_sf, crs = 9822)
-
-# Extract transformed coordinates in meters
-# Combine transformed coordinates back into data frame
-xy_utm_df = cbind(xy, st_coordinates(xy_utm))
-head(xy_utm_df)
 ```
 
 ------------------------------------------------------------------------
@@ -498,7 +339,169 @@ ggplot() +
 
 ------------------------------------------------------------------------
 
-### 10. Check for multi-colinearity and remove highly corrected variables using `rm_correlated`.
+### 7. Generate site by species matrix - `site_spp`
+
+Create a matrix of species counts per site for use in biodiversity and dissimilarity analyses.
+
+```{r site-spp}
+xy = grid_spp[,2:3]
+site_spp = grid_spp[,c(1:3,5:ncol(grid_spp))]
+head(site_spp[,1:10])
+dim(site_spp)
+```
+
+#### Generate record of occurrence counts called `sam_eff`
+
+Summarize the number of species observations per grid cell to assess sampling effort.
+
+```{r sam-eff}
+sam_eff = grid_spp[, c("grid_id","centroid_lon","centroid_lat","obs_sum")]
+obs_cnt = grid_spp[,c(1:3,5)]
+dim(obs_cnt)
+```
+
+#### Generate a binary data frame 'sbs'
+
+Convert species abundance data to presence--absence format (`site_spp_pa`) for binary dissimilarity analyses.
+
+```{r sbs}
+sp_cols = names(site_spp)[-(1:5)]
+sbs     = site_spp %>%
+  mutate(across(all_of(sp_cols), ~ ifelse(. > 0, 1, 0)))
+
+# Assuming 'sp_cols' is a vector of column names
+site_spp_pa = site_spp %>%
+  mutate(across(all_of(sp_cols), ~ ifelse(!is.na(.) & . > 0, 1, 0)))
+
+head(site_spp_pa[,1:10])
+dim(site_spp_pa)
+```
+
+#### Generate richness of sbs row sums and map
+
+Calculate species richness per site based on binary presence--absence data.
+
+```{r spp-rich}
+spp_rich = grid_spp[, c("grid_id","centroid_lon","centroid_lat","spp_rich")]
+```
+
+#### Generate 'sam.eff' and 'spp_rich' raster map
+
+Visualise sampling effort and species richness as raster layers over the study area.
+
+```{r eff-rich}
+ras_effRich = grid_list$grid[[2:3]]
+plot(sqrt(ras_effRich), col = turbo(100))
+```
+
+***Note**: occurrence coordinates are only used for assigning then into grids; they are not needed beyond this step.*
+
+------------------------------------------------------------------------
+
+### 8. Generate site by environment matrix using `get_enviro_data`
+
+Use `get_enviro_data` to extract environmental variables for spatial points from either species observations or grid centroids.
+Data can be sourced from online repositories (e.g. *WorldClim*, *SoilGrids* via `geodata`) or local rasters.
+The function defines an area of interest with a buffer, extracts selected variables, and interpolates missing values using nearby non-NA points.
+Outputs include cropped rasters, spatial points (as an `sf` object), and a combined site-by-environment data frame (`site_env`) for downstream ecological analyses.
+Future support will extend to *CHELSA* (`climenv`), *Google Earth Engine* (`rgee`), and `mapme.biodiversity` for expanded environmental and biodiversity data access.
+
+```{r get-enviro}
+enviro_list = get_enviro_data(
+  data      = sbs,
+  buffer_km = 10,
+  source    = 'geodata',
+  var       = "bio",
+  res       = 5,
+  path      = 'download_data',
+  sp_cols   = 6:ncol(sbs),
+  ext_cols  = c('obs_sum','spp_rich')
+)
+ras_enviro = enviro_list$env_rast
+
+# Optional: Rename the columns to something more descriptive
+names(ras_enviro) = c("temp_mean", "mdr", "iso", "temp_sea", "temp_max",
+                    "temp_min", "temp_rang","temp_wetQ","temp_dryQ", "temp_warmQ",
+                    "temp_coldQ", "rain_mean","rain_wet", "rain_dry", "rain_sea",
+                    "rain_wetQ", "rain_dryQ","rain_warmQ", "rain_coldQ")
+```
+
+#### Add 'eff-rich' raster to the enviro stack raster
+
+Combine environmental rasters with sampling effort and species richness layers for joint spatial analysis.
+
+```{r ras}
+ras_enviro_effRich = c(ras_effRich, resample(ras_enviro, ras_effRich))
+plot(ras_enviro_effRich[[1:4]])
+```
+
+#### Extract environmental variables for site centroids 'xy'
+
+Link environmental data to grid centroids and visualize spatial variation in selected climate variables.
+
+```{r env-df}
+env_df = enviro_list$env_df[,c(1:5,8:26)]
+head(env_df)
+head(env_df[,15:24])
+
+# Rename `env_df` column names
+names(env_df) = c('grid_id','centroid_lon','centroid_lat','obs_sum','spp_rich',"temp_mean", "mdr", "iso", "temp_sea", "temp_max",
+                                "temp_min", "temp_rang","temp_wetQ", "temp_dryQ", "temp_warmQ",
+                                "temp_coldQ", "rain_mean","rain_wet", "rain_dry", "rain_sea",
+                                "rain_wetQ", "rain_dryQ","rain_warmQ", "rain_coldQ")
+
+# Check the first few rows
+head(env_df)
+
+# Plot the results to check the conversion is accurate
+ggplot() +
+  # Add 0.25deg grid layer
+  geom_sf(data = aoi_grid, fill = NA, color = "darkgrey", alpha = 0.5) +
+  # Add bfly points layer
+  geom_point(data = env_df, aes(x = centroid_lon,
+                                  y = centroid_lat,
+                                  color = temp_mean)) +
+  scale_size_continuous(range = c(0.5, 5)) +  # Adjust the point size range (min, max)
+  scale_color_viridis_c(option = "turbo") +  # Use turbo color scale
+  # Add boundary layer
+  geom_sf(data = rsa, fill = NA, color = "black", alpha = 1) +
+  theme_minimal() +
+  labs(
+    title = "0.25° Grid Cells with temp_mean",
+    x = "Longitude",
+    y = "Latitude")   
+```
+
+#### Generate *Site-by-Environment* data frame 'sbe'
+
+Create a unified data frame of site coordinates, sampling effort, richness, and environmental variables for modelling called `sbe`.
+
+```{r sbe}
+sbe = env_df %>%
+  select(grid_id, centroid_lon, centroid_lat, obs_sum, spp_rich, everything())
+```
+
+### 9. Change coordinates projection using `sf::st_transform`
+
+Reproject spatial coordinates from geographic (WGS84) to a projected system (e.g. Albers Equal Area) for analyses requiring distance in meters, such as spatial clustering or environmental modelling.
+
+```{r reproject}
+# Convert to sf object with WGS84 geographic CRS
+head(xy)
+xy_sf = st_as_sf(xy, coords = c("centroid_lon", "centroid_lat"), crs = 4326)
+
+# Project to Albers Equal Area (meters)
+xy_utm = st_transform(xy_sf, crs = 9822)
+
+# Extract transformed coordinates in meters
+# Combine transformed coordinates back into data frame
+xy_utm_df = cbind(xy, st_coordinates(xy_utm))
+head(xy_utm_df)
+```
+
+------------------------------------------------------------------------
+
+### 10. Check for colinearity using `rm_correlated`
 
 Identify and remove highly correlated environmental variables to reduce multicollinearity in subsequent analyses.
 This step ensures model stability by retaining only informative, non-redundant predictors based on a user-defined correlation threshold.
@@ -516,7 +519,7 @@ env_vars_reduced$obs_max = max(env_vars_reduced$obs_sum)
 
 ------------------------------------------------------------------------
 
-### 11. Zeta decline (sbs), orders 2:15
+### 11. Calculate Zeta decline for orders 2:15
 
 #### Expectation of zeta diversity decline using `zetadiv::Zeta.decline.ex`
 
@@ -556,7 +559,7 @@ zeta_mc_utm = Zeta.decline.mc(site_spp_pa[,-(1:6)],
 > -   **Panel 3 & 4 (Exponential and Power law regressions)**: Both remain linear, clearly indicating the zeta diversity declines consistently following a predictable spatial pattern. However, the exact pattern remains similar to previous cases, highlighting that despite spatial constraints, common species become rare quickly as more sites are considered.\
 >     *This result demonstrates clear spatial structuring of biodiversity---species are locally clustered, not randomly distributed across the landscape. Spatial proximity influences which species co-occur more frequently. In practice use `Zeta.decline.mc` for real‐world biodiversity data—both because it scales and because the Monte Carlo envelope is invaluable when ζₖ gets noisier at higher orders.*
 
-### 12. Zeta decays (sbs, xy), orders 2:15
+### 12. Calculate Zeta decay for orders 2:8
 
 #### Zeta distance decay for a range of numbers of assemblages or sites using `zetadiv::Zeta.ddecays`
 
@@ -599,7 +602,7 @@ zeta_decays = Zeta.ddecays(xy_utm_df[,3:4],
 > In other words, rare or localized species contribute to strong distance decay, but widespread species dominate at higher spatial scales, leading to more uniformity.
 > *Species that occur in just two or three sites show a clear “farther apart → fewer shared species” pattern. But when you ask about the handful of really widespread species (those present in four, five, or more sites), their shared‐species counts no longer decline with distance—they form a spatially uniform core.*
 
-### 13. Zeta.msgdm(sbs, sbe, xy), order 2, 3, 5, 10
+### 13. Run a Multi-Site Generalised Dissimilarity Model for order 2
 
 #### Multi-site generalised dissimilarity modelling for a set of environmental variables and distances using `zetadiv::Zeta.msgdm`
 
@@ -645,21 +648,11 @@ Plot.ispline(isplines = zeta2.ispline, distance = TRUE)
 
 > 2. **Sampling intensity (`obs_sum`, open circles)** comes next, with a gentle but steady rise to \~0.045.  This indicates that sites with more observations tend to share more species (or, conversely, that incomplete sampling can depress apparent turnover).
 
-> 3. **Precipitation variables**
+> 3. **Precipitation variables**: **Rain in the warm quarter (`rain_warmQ`, squares)** and **Rain in the dry quarter (`rain_dry`, triangles-down)** both show moderate effects (I-spline heights \~0.02–0.03).  This means differences in seasonal rainfall regimes contribute noticeably to changes in community composition.
 
->    * **Rain in the warm quarter (`rain_warmQ`, squares)** and
->    * **Rain in the dry quarter (`rain_dry`, triangles-down)**
-     both show moderate effects (I-spline heights \~0.02–0.03).  This means differences in seasonal rainfall regimes contribute noticeably to changes in community composition.
+> 4. **Temperature metrics**: **Mean temperature** *(`temp_mean`, triangles-up)*, **Wet‐quarter temperature** *(`temp_wetQ`, X’s)*, **Dry‐quarter temperature** *(`temp_dryQ`, diamonds)*, and the **isothermality index** *(`iso`, plus signs)* all have very low, almost flat I-splines (max heights ≲0.01).  In other words, these thermal variables explain very little additional turnover once you’ve accounted for distance and rainfall.
 
-> 4. **Temperature metrics**
-
->    * **Mean temperature (`temp_mean`, triangles-up),**
->    * **Wet‐quarter temperature (`temp_wetQ`, X’s),**
->    * **Dry‐quarter temperature (`temp_dryQ`, diamonds),**
-     and the **isothermality index (`iso`, plus signs)** all have very low, almost flat I-splines (max heights ≲0.01).  In other words, these thermal variables explain very little additional turnover once you’ve accounted for distance and rainfall.
-
-> **Ecological interpretation:**
-> Spatial distance is the dominant structuring factor in these data—sites further apart share markedly fewer species.  After accounting for that, differences in observation effort and, to a lesser degree, seasonal rainfall still shape multisite community similarity.  Temperature and seasonality metrics, by contrast, appear to have only a minor independent influence on zeta‐diversity in this landscape.
+> **Ecological interpretation:** Spatial distance is the dominant structuring factor in these data—sites further apart share markedly fewer species.  After accounting for that, differences in observation effort and, to a lesser degree, seasonal rainfall still shape multisite community similarity.  Temperature and seasonality metrics, by contrast, appear to have only a minor independent influence on zeta‐diversity in this landscape.
 
 
 ```{r model-results}
@@ -676,7 +669,7 @@ summary(zeta2$model)
 
 ------------------------------------------------------------------------
 
-### 14. Predict(zeta2) with 'sam.eff'
+### 14. Predict current Zeta Diversity (zeta2) with `obs_sum` and current environmental variables
 
 -   In the 'sbe' add 'sam.max', a constant for all sites = max(sam.eff)\
 -   Predict for the updated sbe and xy\
@@ -708,68 +701,9 @@ head(predictors_df)
 -   Run nmds for the predicted zeta matrix\
 -   Plot RGB of the 3 component scores :::
 
-```{r predict-check}
-# # Check results make sense
-# ggplot(predictors_df, aes(x = rich_o1, y = pred_zetaExp)) +
-#   geom_point(alpha = 0.3) +
-#   geom_smooth(method = "lm", se = FALSE) +
-#   labs(
-#     x = "Observed richness (ζ₁)",
-#     y = "Predicted turnover (ζ₂ on probability scale)"
-#   )
-# cor(predictors_df$rich_o1, predictors_df$pred_zetaExp)
-# 
-# # 3) make the plot
-# ggplot(predictors_df, aes(x = rich_o1)) +
-#   geom_point(aes(y = turn_o2),    colour = "black", alpha = .6) +
-#   geom_smooth(aes(y = turn_o2),   method = "lm", colour = "black", se = FALSE) +
-#   geom_point(aes(y = pred_zetaExp), colour = "red",   alpha = .6) +
-#   geom_smooth(aes(y = pred_zetaExp),method = "lm", colour = "red",   se = FALSE) +
-#   labs(
-#     x = expression(zeta[1]*" (richness)"),
-#     y = expression(zeta[2]*""),
-#     colour = "Type"
-#   ) +
-#   scale_colour_manual(
-#     values = c("Observed" = "black", "Predicted" = "red")
-#   ) +
-#   theme_minimal()
-# 
-# 
-#  
-# # define your palette
-# pal <- colorRampPalette(c("blue","green","yellow","orange","red","darkred"))
-# 
-# # ggplot2 spatial plot
-# ggplot(predictors_df, aes(
-#     x    = centroid_lon,
-#     y    = centroid_lat,
-#     fill = turn_o2
-#   )) +
-#   geom_tile() +
-#   scale_fill_gradientn(
-#     colours = pal(50)
-#   ) +
-#   geom_text(
-#       aes_string(label = "rich_o1"),
-#       color     = "yellow",
-#       size      = 1.5,
-#       # fontface  = "bold",
-#       check_overlap = TRUE
-#     ) +
-#   coord_quickmap() +
-#   theme_minimal() +
-#   labs(
-#     x = "Longitude",
-#     y = "Latitude",
-#     title = "Observed ζ₂ (pairwise shared species)"
-#   )
-
-```
-
 ------------------------------------------------------------------------
 
-### 15. Clustering analyses directly using zeta.now
+### 15. Run clustering analyses to map bioregion clusters of current zeta2
 
 -   Generate maps of dissimilarity (the rgb plot)\
 -   Generate map of bioregions (from clustering) :::
@@ -796,7 +730,7 @@ bioreg_result = map_bioreg(
 
 ------------------------------------------------------------------------
 
-### 16. Predict(zeta2)
+### 16. Predict future Zeta Diversity and map bioregion change
 
 -   with appended (future scenarios) environmental variables and 'sam.max' in sbe\
 -   For m number of scenarios plus the present scenario (step 14) and n sites of xy\
@@ -834,14 +768,14 @@ result_bioregDiff
 
 # Mask the raster grid using the boundary of South Africa
 # Convert to a terra vector
-rsa_vect <- vect(rsa)
+rsa_vect = vect(rsa)
 # Create an empty raster over RSA at your desired resolution
 # Here we use the extent of rsa_vect and a 0.05-degree cell size:
-grid <- rast(rsa_vect, resolution = 0.2489884, crs = crs(rsa_vect))
-values(grid) <- 1   # fill with dummy values
+grid = rast(rsa_vect, resolution = 0.2489884, crs = crs(rsa_vect))
+values(grid) = 1   # fill with dummy values
 
 # Mask that grid to the RSA boundary
-grid_masked <- mask(grid, rsa_vect)
+grid_masked = mask(grid, rsa_vect)
 mask_bioregDiff = mask(resample(result_bioregDiff, grid_masked, method = "near"), grid_masked)
 
 # Plot all change results
@@ -858,7 +792,9 @@ plot(mask_bioregDiff, col = viridis(100, direction = -1))
 
 ------------------------------------------------------------------------
 
-### 17. Deposit all data frames, tables, maps, and standard metadata to zenodo
+### 17. Deposit all results into Zenodo
+
+All data frames, tables, maps, and standard metadata can be deposited into Zenodo using [`zen4R`](https://github.com/eblondel/zen4R/wiki) or [Zenodo UI](https://zenodo.org/records/10715460).
 
 ```{r zenodo}
 # save(occ, sbs, sbe, zeta2, zeta_now, zeta_future, file="dissmapr_results.Rdata")
